Module-01/ec2_instance_provision.tf
resource "aws_instance" "name" {
  ami             = "ami-0f7919c33c90f5b58"
  instance_type   = "t2.micro"
  security_groups = ["${aws_security_group.allow_http.name}"]
  key_name        = "awstest"
}
